--- a/style.css
+++ b/style.css
@@ -3,3 +3,5 @@ h1 {
   font-size:25px;
   font-famoly:Courier,Arial,Times;
 }
+#my_container {
+    background-size: 100% auto;width:100%;height:100%;}
