--- a/style.css
+++ b/style.css
@@ -14,6 +14,6 @@ table {
   margin-top:190px;
   font-family: 'Fredericka the Great', cursive;
   font-size:40px;
-  color:#378bff;
+  color:#246BB2;
 
 }
