--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@ h1 {
   font-family: 'IM Fell Double Pica SC', serif;
   text-align:center;
 }
-#my_container {
+#mountains {
     background-size: 100% auto;width:100%;height:100%;}
 
 #nav {
@@ -16,4 +16,11 @@ table {
   font-size:40px;
   color:#246BB2;
 
+}
+a:link, a:visited {
+  color:#246BB2;
+}
+
+a:hover, a:active{
+  color:#00FFCC;
 }
