--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -4,3 +4,4 @@ h1 {
   font-family: 'Indie Flower', cursive;
   margin-bottom:120%;
 }
+#me {background:url("http://www.davelangley.org/uploads/images/about_me_title01.jpg") no-repeat; background-size: 100% auto;}
