--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -4,6 +4,20 @@ h1 {
   font-family: 'Indie Flower', cursive;
   margin-bottom:120%;
 }
-#me {
-  background-size: 100% auto;width:100%; length: 100%;
+html, body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#full-screen-background-image {
+  z-index: -999;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
