--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ h1 {
   text-align:center;
 }
 table {
-  margin-top:190px;
+  margin-top:200px;
   font-family: 'Fredericka the Great', cursive;
   font-size:40px;
   color:#246BB2;
@@ -27,7 +27,11 @@ a:hover, a:active{
   color:#00FFCC;
 }
 img {
-  width:60%;
-  length:50%;
+  width:20%;
+  length:40%;
   text-align: justify;
+}
+div {
+  float:left;
+  margin-bottom: -100;
 }
