--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -3,7 +3,7 @@ h1 {
   color:#8533FF;
   font-family: 'Indie Flower', cursive;
   margin-bottom:120%;
-  text-align: center;
+  text-align:left;
 }
 html, body {
   height: 100%;
