--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,8 +4,23 @@ h1 {
   font-family: 'IM Fell Double Pica SC', serif;
   text-align:center;
 }
-#mountains {
-    background-size: 100% auto;width:100%;height:100%;}
+html, body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#full-screen-background-image {
+  z-index: -999;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 
 #nav {
   width:100%;
