--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -1,8 +1,8 @@
 h1 {
-  font-size:50px;
-  color:#8533FF;
+  font-size:70px;
+  color:#FF5050;
   font-family: 'Indie Flower', cursive;
-  margin-bottom:120%;
+  margin-top: 20px;
   text-align:left;
 }
 html, body {
@@ -21,4 +21,21 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
+  opacity:.8;
+}
+#nav {
+  width:100%;
+  text-align:center;}
+  table {
+    font-family: 'Fredericka the Great', cursive;
+    font-size:40px;
+    color:#1489FF;
+    text-align:center;
+}
+a:link, a:visited {
+  color:#246BB2;
+}
+
+a:hover, a:active{
+  color:#00FFCC;
 }
