--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -22,3 +22,19 @@ html, body {
   left: 0;
   opacity:.6;
 }
+#nav {
+  width:100%;
+  text-align:center;}
+  table {
+    font-family: 'Fredericka the Great', cursive;
+    font-size:40px;
+    color:#1489FF;
+    text-align:center;
+}
+a:link, a:visited {
+  color:#246BB2;
+}
+
+a:hover, a:active{
+  color:#00FFCC;
+}
