--- a/CSS/style4.css
+++ b/CSS/style4.css
@@ -23,3 +23,19 @@ h1 {
   margin-left:40px;
 
 }
+#nav {
+  width:100%;
+  text-align:center;}
+  table {
+    font-family: 'Fredericka the Great', cursive;
+    font-size:40px;
+    color:#1489FF;
+    text-align:center;
+}
+a:link, a:visited {
+  color:#246BB2;
+}
+
+a:hover, a:active{
+  color:#00FFCC;
+}
