--- a/CSS/style5.css
+++ b/CSS/style5.css
@@ -1,7 +1,8 @@
 h1 {
   font-size:70px;
-  color:#FFD174;
+  color: #41C0FF;
   text-align: center;
+  margin-top:2px;
 }
 html, body {
   height: 100%;
@@ -20,4 +21,20 @@ html, body {
   top: 0;
   left: 0;
   opacity:.8;
+}
+#nav {
+  width:100%;
+  text-align:center;}
+  table {
+    font-family: 'Fredericka the Great', cursive;
+    font-size:40px;
+    color:#1489FF;
+    text-align:center;
+}
+a:link, a:visited {
+  color:#246BB2;
+}
+
+a:hover, a:active{
+  color:#00FFCC;
 }
