--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -1,9 +1,8 @@
 h1 {
-  font-size:70px;
-  color: #41C0FF;
-  text-align: center;
-  margin-top:2px;
-  font-family: 'Allan', cursive;
+  color:;
+  font-size:80px;
+
+  text-align:center;
 }
 html, body {
   height: 100%;
@@ -21,16 +20,18 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  opacity:.8;
 }
+
 #nav {
   width:100%;
-  text-align:center;}
-  table {
-    font-family: 'Fredericka the Great', cursive;
-    font-size:40px;
-    color:#1489FF;
-    text-align:center;
+  text-align:center;
+}
+table {
+  font-family: 'Fredericka the Great', cursive;
+  font-size:40px;
+  color:#246BB2;
+  text-align:center;
+
 }
 a:link, a:visited {
   color:#246BB2;
