--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -1,8 +1,9 @@
 h1 {
-  color:;
+  color:#6666FF;
   font-size:80px;
-
-  text-align:center;
+  font-family: 'Architects Daughter', cursive;
+  margin-top:2px;
+text-align:center;
 }
 html, body {
   height: 100%;
@@ -20,17 +21,22 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
+  opacity: .8;
 }
 
 #nav {
   width:100%;
   text-align:center;
+  margin-top:-2em;
 }
 table {
   font-family: 'Fredericka the Great', cursive;
   font-size:40px;
   color:#246BB2;
   text-align:center;
+
+
+
 
 }
 a:link, a:visited {
