--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -2,7 +2,7 @@ h1 {
   font-size:70px;
   color:#FF5050;
   font-family: 'Indie Flower', cursive;
-  margin-top: 20px;
+  margin-top:2px;
   text-align:left;
 }
 html, body {
@@ -25,12 +25,15 @@ html, body {
 }
 #nav {
   width:100%;
-  text-align:center;}
+  text-align:center;
+
+}
   table {
     font-family: 'Fredericka the Great', cursive;
     font-size:40px;
     color:#1489FF;
     text-align:center;
+      margin-top:
 }
 a:link, a:visited {
   color:#246BB2;
