--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -3,6 +3,7 @@ h1 {
   color:#E64848;
   text-align: center;
   font-family: 'Rock Salt', cursive;
+  margin-top:2px;
 }
 html, body {
   height: 100%;
@@ -24,12 +25,14 @@ html, body {
 }
 #nav {
   width:100%;
-  text-align:center;}
+  text-align:center;
+}
   table {
     font-family: 'Fredericka the Great', cursive;
     font-size:40px;
     color:#1489FF;
     text-align:center;
+    margin-top:10px;
 }
 a:link, a:visited {
   color:#246BB2;
