--- a/CSS/style5.css
+++ b/CSS/style5.css
@@ -25,12 +25,14 @@ html, body {
 }
 #nav {
   width:100%;
-  text-align:center;}
+  text-align:center;
+}
   table {
     font-family: 'Fredericka the Great', cursive;
     font-size:40px;
     color:#1489FF;
     text-align:center;
+      margin-top:10px;
 }
 a:link, a:visited {
   color:#246BB2;
