--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -26,6 +26,7 @@ html, body {
 #nav {
   width:100%;
   text-align:center;
+    margin-top:-2em;
 }
   table {
     font-family: 'Fredericka the Great', cursive;
