--- a/CSS/style4.css
+++ b/CSS/style4.css
@@ -22,11 +22,11 @@ h1 {
   color:#FF8914;
   margin-left:40px;
   margin-top:2px;
-
 }
 #nav {
   width:100%;
   text-align:center;
+    margin-top:-2em;
 }
   table {
     font-family: 'Fredericka the Great', cursive;
@@ -36,7 +36,7 @@ h1 {
     margin-top:10px;
 }
 a:link, a:visited {
-  color:#246BB2;
+  color:#FF8533;
 }
 
 a:hover, a:active{
