--- a/CSS/style5.css
+++ b/CSS/style5.css
@@ -26,6 +26,7 @@ html, body {
 #nav {
   width:100%;
   text-align:center;
+    margin-top:-1em;
 }
   table {
     font-family: 'Fredericka the Great', cursive;
@@ -35,7 +36,7 @@ html, body {
       margin-top:10px;
 }
 a:link, a:visited {
-  color:#246BB2;
+  color:#9966FF;
 }
 
 a:hover, a:active{
