--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -34,13 +34,9 @@ table {
   font-size:40px;
   color:#246BB2;
   text-align:center;
-
-
-
-
 }
 a:link, a:visited {
-  color:#246BB2;
+  color:#4180FF;
 }
 
 a:hover, a:active{
