--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -21,13 +21,16 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  opacity: .7;
+  opacity: .6;
 }
 
 #nav {
   width:100%;
   text-align:center;
   margin-top:-2em;
+}
+span{
+  font-size:70px;
 }
 table {
   font-family: 'Fredericka the Great', cursive;
@@ -43,14 +46,12 @@ a:hover, a:active{
   color:#00FFCC;
 }
 #paraone {
-  font-size:30px;
+  font-size:65px;
   color:#850BFF;
     font-family: 'Architects Daughter', cursive;
-    margin-left:1em;
 }
-p:nth-child(2) {
-  font-size:30px;
-  color:#00EB00;
+#paratwo {
+  font-size:65px;
+  color:#ac3973;
     font-family: 'Architects Daughter', cursive;
-    margin-left:1em;
 }
