--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -21,7 +21,7 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  opacity:.6;
+  opacity:.5;
 }
 #nav {
   width:100%;
@@ -41,4 +41,10 @@ a:link, a:visited {
 
 a:hover, a:active{
   color:#00FFCC;
+}
+p {
+  font-size:35px;
+  font-family: 'Rock Salt', cursive;
+  color:#6666ff;
+  margin-left:45px;
 }
