--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -43,7 +43,7 @@ a:hover, a:active{
   color:#00FFCC;
 }
 p {
-  color:#FF5050;
+  color: #cc0000;
   font-size:40px;
   font-family: 'Indie Flower', cursive;
   margin-left:30px;
